# nxp-car

./: .gitignore  README.md
arduino/: Ackerman_pid_serial.ino
install/: local_setup.sh  setup.sh
log/: latest_build
src/angle_pid/: CMakeLists.txt  package.xml
src/angle_pid/src/: angle_pid.cpp
src/car/: package.xml  setup.py
src/car/car/: interface.py  navigation.py
src/car_sensory_control/: CMakeLists.txt  package.xml
src/car_sensory_control/src/: camera_drive.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: controller.cpp
src/ros_gz_launch_bringup/: CMakeLists.txt  package.xml
src/ros_gz_launch_bringup/config/: nxp_cupcar.rviz  nxp_cupcar_image_plugin.rviz  nxp_cupcar_msg_bridge.yaml
src/ros_gz_launch_bringup/launch/: combined.launch.py  nxp_cup.launch.py  raceway.launch.py  raceway_octagon.launch.py
src/ros_gz_model_description/: CMakeLists.txt  package.xml
src/ros_gz_model_description/models/nxp_cupcar/: model.config  model_size.py  nxp_cupcar_prec_model.sdf  nxp_cupcar_prec_model.sdf.xacro  test.sdf
src/ros_gz_model_description/models/nxp_cupcar/meshes/: CUPCarCarbonFiber_binary.stl
src/ros_gz_model_description/models/nxp_raceway/: model.config  raceway_model.sdf
src/ros_gz_model_description/models/nxp_raceway_octagon/: model.config  raceway_octagon_model.sdf
src/ros_gz_world_gazebo/: CMakeLists.txt  package.xml
src/ros_gz_world_gazebo/src/: BasicSystem.cc  FullSystem.cc  MyOdometerSensor.cc  MyOdometerSensor.hh  MyOdometerSystem.cc  MyOdometerSystem.hh
src/ros_gz_world_gazebo/worlds/: combined_world.sdf  nxp_cupcar_world.sdf  raceway_octagon_world.sdf  raceway_world.sdf
src/video_publisher/: package.xml  setup.py
src/video_publisher/video_publisher/: video_node.py
src/video_publisher_cpp/: CMakeLists.txt  package.xml
src/video_publisher_cpp/src/: video_publisher_cpp.cpp
