<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_world_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific world implementations for the nxp sim project</description>
  <maintainer email="zenab.sadi@tum.de"></maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Zenab Sadi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz_model_description</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

